<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!-- AppBarLayout contiene la Toolbar y el contenido que colapsará -->
    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <!-- CollapsingToolbarLayout para el efecto de colapso -->
        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/collapsing_toolbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:contentScrim="@color/purple_500"
            app:expandedTitleMarginBottom="48dp"
            app:expandedTitleMarginStart="16dp"
            app:layout_scrollFlags="scroll|exitUntilCollapsed"
            app:titleEnabled="false">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="bottom|start"
                android:contentDescription="@null"
                android:src="@drawable/bg_detail"
                app:layout_collapseMode="parallax" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="400dp"
                android:layout_gravity="bottom|start"
                android:contentDescription="@null"
                android:paddingTop="40dp"
                android:paddingBottom="40dp"
                android:scaleType="centerCrop"
                android:src="@drawable/img_the_band_party"
                app:layout_collapseMode="parallax" />

            <TextView
                android:id="@+id/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|start"
                android:layout_marginStart="32dp"
                android:layout_marginEnd="24dp"
                android:layout_marginBottom="32dp"
                android:text="@string/collapsing_toolbar_album_title"
                android:textColor="@color/white"
                android:textSize="28sp"
                android:textStyle="bold"
                app:layout_collapseMode="parallax" />

            <TextView
                android:id="@+id/subtitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|start"
                android:layout_marginStart="32dp"
                android:layout_marginEnd="32dp"
                android:layout_marginBottom="16dp"
                android:text="@string/collapsing_toolbar_album_subtitle"
                android:textColor="@color/white"
                android:textSize="16sp"
                app:layout_collapseMode="parallax" />

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:layout_collapseMode="pin"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

        </com.google.android.material.appbar.CollapsingToolbarLayout>

    </com.google.android.material.appbar.AppBarLayout>


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/albumsRv"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:listitem="@layout/album_item" />


    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_add_album"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end|bottom"
        android:layout_margin="16dp"
        android:contentDescription="@string/add_album"
        app:srcCompat="@drawable/ic_add_album" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>

