<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="album"
            type="com.miso.vinilosapp.data.models.Album" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp">

        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardElevation="1dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imageView_album"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:contentDescription="@string/album_cover"
                    android:scaleType="fitXY"
                    tools:src="@drawable/ic_launcher_background" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingStart="8dp"
                    android:paddingEnd="8dp">

                    <TextView
                        android:id="@+id/textView_album_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ellipsize="end"
                        android:importantForAccessibility="yes"
                        android:singleLine="true"
                        android:text="@{album.name}"
                        android:textSize="24sp"
                        android:textStyle="bold"
                        app:layout_constraintStart_toEndOf="@+id/imageView_album"
                        tools:text="Titulo Demasiado extendido como " />

                    <TextView
                        android:id="@+id/textView_album_description"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ellipsize="end"
                        android:importantForAccessibility="yes"
                        android:maxLines="2"
                        android:text="@{album.description}"
                        tools:text="Description duis aute irure dolor in reprehenderit in voluptate velit.Description duis aute irure dolor in reprehenderit in voluptate velit." />

                    <TextView
                        android:id="@+id/textView_album_label"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:importantForAccessibility="yes"
                        android:text='@{album.recordLabel + " • " + album.genre}'
                        android:textSize="12sp"
                        tools:text="Sony Music • Sony Music" />


                </LinearLayout>
            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
