<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="album"
            type="com.miso.vinilosapp.data.models.Album" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:orientation="vertical"
        tools:context=".ui.AlbumDetailFragment">

        <ImageView
            android:id="@+id/albumImage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            tools:src="@tools:sample/avatars" />

        <TextView
            android:id="@+id/albumTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@{album.name}"
            android:textAlignment="center"
            android:textSize="24sp"
            android:textStyle="bold"
            tools:text="Titulo cancion" />

        <TextView
            android:id="@+id/albumGenre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@{album.genre}"
            android:textAlignment="center"
            tools:text="Genero" />

        <TextView
            android:id="@+id/albumDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@{album.description}"
            android:textAlignment="center"
            tools:text="Descripcion" />

    </LinearLayout>

</layout>